# Genetic-algorithm-Graduation-project-KAYA

./: .gitignore  README.md  docker-compose.yml  dockerfile  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  pyproject.toml
attached_assets/: Pasted--1-Build-Your-Own-Database-A-small-database-teaches-sto_1773444520433.txt
backend/: package.json  pom.xml
data/: old.csv
frontend/: index.html  package.json  requirements.yaml  vite.config.ts
frontend/.replit-artifact/: artifact.toml
frontend/src/: App.tsx  index.css
frontend/src/components/: excel-import-button.tsx  layout.tsx  timetable-calendar.tsx
frontend/src/hooks/: use-confirm.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: conflicts.tsx  courses.tsx  dashboard.tsx  departments.tsx  lectures.tsx  not-found.tsx  rooms.tsx  teachers.tsx  time-slots.tsx  timetables.tsx
lib/api-spec/: openapi.yaml
lib/db/src/schema/: courses.ts  departments.ts  index.ts  rooms.ts  schedule_entries.ts  teacher_availability.ts  teachers.ts  timeslots.ts
scripts/: package.json
scripts/src/: proxy.ts
src/main/java/com/kaya/: Evolution.java  KayaApplication.java
src/main/java/data/: CSVReader.java  ExcelReader.java  TimeSlotGenerator.java  UniversityData.java
src/main/java/model/: Course.java  DayPattern.java  Room.java  Teacher.java  TimeSlot.java
src/main/java/service/: TimetableService.java
src/main/java/solver/: SolutionPrinter.java  TimetableModel.java  TimetableModelBuilder.java  TimetableSolver.java
src/main/resources/: 2526_first_term_sched.xlsx  application.properties  schedule.csv
(+178 files in other folders)
